--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cronitorio/cronitor-rum-nextjs",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Official Cronitor integration for Next.js",
   "repository": {
     "type": "git",
@@ -29,20 +29,20 @@
     "lint": "tslint -p tsconfig.json"
   },
   "peerDependencies": {
-    "next": "^10 || ^11 || ^12 || ^13",
-    "react": "^16 || ^17 || ^18"
+    "next": "^13",
+    "react": "^18"
   },
   "dependencies": {
     "@cronitorio/cronitor-rum-js": "^0.1.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.20",
-    "next": "^11.1.2",
-    "prettier": "^2.2.1",
-    "react": "^17.0.2",
+    "@types/react": "^18.0.27",
+    "next": "^13.1.4",
+    "prettier": "^2.8.3",
+    "react": "^18.2.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.9.4"
   },
   "bugs": {
     "url": "https://github.com/cronitorio/cronitor-rum-nextjs/issues"
