--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cronitorio/cronitor-rum-nextjs",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Official Cronitor integration for Next.js",
   "repository": {
     "type": "git",
@@ -33,7 +33,7 @@
     "react": "^18"
   },
   "dependencies": {
-    "@cronitorio/cronitor-rum-js": "^0.3.0"
+    "@cronitorio/cronitor-rum": "^0.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
